--- a/source/translated/fr/index.po
+++ b/source/translated/fr/index.po
@@ -20,24 +20,24 @@ msgstr ""
 # 2b5da17ecd074523a3bf0b32836c190b
 #: ../../index.rst:23
 msgid ":ref:`genindex`"
-msgstr ""
+msgstr ":ref:`genindex`"
 
 # 85827edba2024631bf990043549c2471
 #: ../../index.rst:24
 msgid ":ref:`search`"
-msgstr ""
+msgstr ":ref:`search`"
 
 # 1d0befb093b5429a97d0022abe31a5d8
 #: ../../index.rst:4
 msgid "Contents:"
-msgstr ""
+msgstr "Contenu:"
 
 # 388ae7bcb7094cdda966f2b9c450cae8
 #: ../../index.rst:21
 msgid "Indices and tables"
-msgstr ""
+msgstr "Indices et tables"
 
 # 5fe318ac06be4ac9b5626b17d2c85049
 #: ../../index.rst:2
 msgid "Welcome to OpenSVC documentation!"
-msgstr ""
+msgstr "Bienvenu dans la documentation de OpenSVC!"
