fr translation for agent.update

--- a/source/translated/fr/agent.template.env.po
+++ b/source/translated/fr/agent.template.env.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenSVC 1.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-07-18 11:41\n"
+"POT-Creation-Date: 2012-07-21 19:50\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -23,8 +23,10 @@ msgid ""
 "Here is a copy of the template service env file available on the nodes at ``/"
 "opt/opensvc/usr/share/doc/template.env``::"
 msgstr ""
+"Voici une copie du fichier-modèle env de service qui est disponible sur les "
+"noeuds à l'emplacement ``/opt/opensvc/usr/share/doc/template.env`` ::"
 
-# be2f0c5836b449b6afff554742f1942e
+# d2d50aa930f24624ad8db2713c813f61
 #: ../../agent.template.env.rst:2
 msgid "Service configuration file template"
-msgstr ""
+msgstr "Fichier-modèle de configuration de service"
