--- a/source/translated/fr/agent.update.po
+++ b/source/translated/fr/agent.update.po
@@ -20,17 +20,17 @@ msgstr ""
 # 9a34f89fb0e64ee79197781b38c13b8c
 #: ../../agent.update.rst:49
 msgid "**node.repo**"
-msgstr ""
+msgstr "**node.repo**"
 
 # ea4d31c4d3f24951ac53e234877861b6
 #: ../../agent.update.rst:53
 msgid "**node.repopkg**"
-msgstr ""
+msgstr "**node.repopkg**"
 
 # 7fc912038f8d45d69aea0b9b3fbfb939
 #: ../../agent.update.rst:20
 msgid "A mirror can be set up using::"
-msgstr ""
+msgstr "Un miroir peut être initialisé par ::"
 
 # ae3f6b69261049e2998e0c9eb4e22376
 #: ../../agent.update.rst:42
@@ -39,6 +39,10 @@ msgid ""
 "according to your own policies. Beware, the mirroring step may have "
 "installed current links pointing to the lastest available agent packages."
 msgstr ""
+"Après l'initialisation du miroir, il reste à mettre à jour les liens "
+"current selon votre politique. Attention, l'étape de miroir peut avoir "
+"installé des liens current pointant sur les dernières versions disponibles "
+"de l'agent OpenSVC."
 
 # 45dc5f5ed3e646da88c0ad7edeae6b17
 #: ../../agent.update.rst:11
@@ -46,11 +50,13 @@ msgid ""
 "Download the required opensvc package to your hosts and use operating system "
 "specific local package management commands."
 msgstr ""
+"Téléchargez le paquet OpenSVC correspondant à vos serveurs et utilisez les "
+"commandes de gestion de paquet spécifique au système d'exploitation."
 
 # 925176f269194260a72e70c2a7b9695c
 #: ../../agent.update.rst:57
 msgid "Example::"
-msgstr ""
+msgstr "Exemple ::"
 
 # db78f997c3e04dc1b5b62183b1dca483
 #: ../../agent.update.rst:12
@@ -59,16 +65,19 @@ msgid ""
 "depots and use operating system specific network-aware package management "
 "commands."
 msgstr ""
+"Alimentez vos dépots spécifiques à vos systèmes d'exploitation avec les "
+"paquets OpenSVC et utilisez les commandes d'installation de paquet à "
+"distance de vos systèmes."
 
 # 67f1d632d5ed4db19ad0b1b45783d6f9
 #: ../../agent.update.rst:18
 msgid "Initialize the mirror"
-msgstr ""
+msgstr "Initialisation d'un miroir"
 
 # df28571ce3e94cfd8f5487317802c732
 #: ../../agent.update.rst:7
 msgid "Introduction"
-msgstr ""
+msgstr "Introduction"
 
 # 5e5ed28c50b94814ae4585bcb8656251
 #: ../../agent.update.rst:13
@@ -76,11 +85,14 @@ msgid ""
 "Mirror http://repo.opensvc.com on a corporate server and set up the opensvc "
 "agent to use this mirror as a package source."
 msgstr ""
+"Créez un miroir de http://repo.opensvc.com sur un serveur de l'entreprise et "
+"paramétrez les agents OpenSVC pour qu'ils utilisent ce miroir comme source "
+"de paquets."
 
 # ae1939002c7f4365bce3094e5a5f3723
 #: ../../agent.update.rst:4
 msgid "OpenSVC agent updates"
-msgstr ""
+msgstr "Mises à jour de l'agent OpenSVC"
 
 # 3b24ab82ca024a56bf3db57af947ce50
 #: ../../agent.update.rst:9
@@ -89,16 +101,20 @@ msgid ""
 "opensvc.com. Agents can be updated using one of the following methods, "
 "ordered by scalability:"
 msgstr ""
+"OpenSVC met à disposition des paquets pour tous les systèmes d'exploitation "
+"supportés sur http://repo.opensvc.com. Les agents peuvent être mis à jour "
+"par les méthodes suivantes, par ordre d'adéquation à un volume de serveurs "
+"croissant :"
 
 # 9e64635208f74bf0afddaeaa1b8ff694
 #: ../../agent.update.rst:45
 msgid "Set up the agents"
-msgstr ""
+msgstr "Paramétrage des agents"
 
 # 4bd39e611a02483687e860b269032b12
 #: ../../agent.update.rst:38
 msgid "Set up the published versions"
-msgstr ""
+msgstr "Paramétrage des versions publiées"
 
 # c49a7074486842b084ebd4f8b7c374ae
 #: ../../agent.update.rst:40
@@ -108,6 +124,10 @@ msgid ""
 "agent. For example a Solaris host executing 'nodemgr updatepkg' would try to "
 "download pkg/current."
 msgstr ""
+"L'agent OpenSVC télécharge le fichier pointé par le lien nommé ``current`` "
+"dans le répertoire portant le nom du système de paquetage supporté par le "
+"système d'exploitation exécutant l'agent. Par exemple, un serveur Solaris "
+"exécutant la commande 'nodemgr updatepkg' téléchargerait pkg/current."
 
 # 4245db92a0e84c86acc758d9b3dcc00b
 #: ../../agent.update.rst:47
@@ -115,26 +135,28 @@ msgid ""
 "The repository must be known to the agent. This set up is done with either "
 "the node.repo or the node.repopkg ``node.conf`` parameters."
 msgstr ""
-
+"Le dépot doit être connu de l'agent. Cette configuration se fait par "
+"le paramètre node.repo ou node.repopkg du fichier ``node.conf``."
+ 
 # 7bd417bdab7c42d894ed30a04072d35c
 #: ../../agent.update.rst:24
 msgid "The resulting file tree must organized as::"
-msgstr ""
+msgstr "L'arborescence de fichiers résultante doit être organisée comme suit ::"
 
 # e706baab59134abc8c889d2d565cad66
 #: ../../agent.update.rst:64
 msgid "The update command is::"
-msgstr ""
+msgstr "La commande de mise à jour est ::"
 
 # 482fb252c9a047089514212dcc9508ca
 #: ../../agent.update.rst:15
 msgid "This chapter describes the last method."
-msgstr ""
+msgstr "Ce chapitre décrit cette dernière méthode."
 
 # 5472ad9c57a74a2493f7c34c8165ba2b
 #: ../../agent.update.rst:68
 msgid "This command is operating system agnostic."
-msgstr ""
+msgstr "Cette commande est agnostique au système d'exploitation."
 
 # 053ac8dac05149a49a21fbc7ceaccadb
 #: ../../agent.update.rst:55
@@ -142,6 +164,9 @@ msgid ""
 "This parameter allows to set up a URI pointing to a pure OpenSVC agent "
 "packages repository. If specified node.repopkg overrides node.repo."
 msgstr ""
+"Ce paramètre permet de définir une URI pointant sur une arborescence "
+"de paquets OpenSVC respectant l'organisation maître. Si défini, le "
+"paramètre node.repopkg prend le pas sur node.repo."
 
 # 435992fb67e64cbeac5d9fcd5203d451
 #: ../../agent.update.rst:51
@@ -150,8 +175,12 @@ msgid ""
 "compliance gzipped tarballs in the compliance/ subdirectory and OpenSVC "
 "agent packages in the packages/ subdirectory."
 msgstr ""
+"Ce paramètre permet de définir une URI pointant sur une arborescence "
+"hébergeant à la fois une archive de type tarball gzippée dans le sous-"
+"répertoire compliance/ et les paquets de l'agent OpenSVC dans le sous-"
+"répertoire packages."
 
 # da0baa5ea97b4809a7a5c5aca3309dfd
 #: ../../agent.update.rst:62
 msgid "Updating the agent"
-msgstr ""
+msgstr "Mise à jour de l'agent"
